[package]
name = "actix-sqlx-postgresql"
version = "0.1.0"
authors = ["LéonGGX <lgengoux@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
sqlx = {version = "0.3.5", features = ["postgres", "macros"]}
serde = "1.0.111"
serde_json = "1.0.53"
anyhow = "1.0.31"
structopt = "0.3.14"
dotenv = "0.15.0"
futures = "0.3.5"
env_logger = "0.7.1"
actix-web-codegen = "0.2.2"
